Adicionando ImgResponseDTO e uma WebConfig